Version 4.63.0
--------------
    Fix a minor C error found while building for Python 2.5
    and Exim 4.63.  No changes in functionality - should still
    work with older/newer Exim/Python combinations.

    Updated the README.FreeBSD to use more modern version
    numbers in the examples.


Version 4.41.0
--------------
    Workaround problem preventing compiling on Cygwin using
    GCC.  No changes to the functionality at all.  

    Added a README.Cygwin to mention what to do if the correct
    library to link to isn't found on Cygwin.

    Updated the README file to give a few more examples, and
    remove the paragraph about being able to access header 
    objects as sequences (which actually stopped working
    in the last version).  Updated the example that catches
    and logs exceptions to have it write to the Exim paniclog
    instead of the mainlog.

    Updated the README.FreeBSD to use more modern version
    numbers in the examples.


Version 4.20.2
--------------

    Found a serious bug with my new custom header objects, they
    were lacking the required C deallocation function, so
    when they were being destroyed, Python would die with a 
    signall 11 error.  Fortunately Exim could handle that 
    situation and report a temporary error back to the client.

    It was kind of a subtle problem in that you didn't see it
    happen with single messages, but if a SMTP client attempted
    to send more than one, it'd die on the second message as the
    old headers were being replaced in the exim dictionary
    by the new ones.

    Dropped the backwards-compatibility stuff that allowed those
    header objects to be accessessed as sequences.

    Added some protection so that if you managed to hang onto
    old header references after a message was done being processed,
    and the underlying Exim structures were no longer present, 
    trying to read their values didn't cause another signal 11 or